<resources>
    <string name="app_name">DNSdroid</string>
    <string name="start_test">Test</string>
    <string name="progress_test">Testing. Please wait...</string>
    <string name="domain_input"></string>
    <string name="domain_input_help">Enter your domain name</string>
    <string name="error_valid_domain">Please enter a valid domain name!</string>
    <string name="error_no_ns_found">No name server found for:</string>
    <string name="share_header">DNS test results for:</string>
    <string name="share_footer">DNSdroid Android application (http://www.geoid.ch/dnsdroid)</string>
    <string name="menu_test">Test</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_about">About</string>
    <string name="menu_prefereneces">Preferences</string>
    <string name="menu_back">Back</string>
    <string name="menu_share">Share</string>
	<string name="notification_title">domains with</string>
	<string name="notification_text">DNSdroid detected errors in the DNS</string>
    <string name="pref_title_resolver">Resolver configuration:</string>
    <string name="pref_system_default_resolver">Use default resolver</string>
    <string name="pref_system_resolver">Use a custom resolver</string>
    <string name="pref_title_interval">Auto re-test configuration:</string>
    <string name="pref_system_interval">Update schedule</string>
    <string name="pref_system_message">Notification</string>
    <string name="pref_system_dnssec">Test DNSSEC availability</string>
    <string name="pref_test_nodnssec">is not validating DNSSEC signatures!</string>
    <string name="pref_test_dnssec">Your resolver is validating DNSSEC signatures!</string>
    <string name="pref_test_fail">Error during testing </string>
    <string name="pref_title_options">Query options:</string>
    <string name="pref_system_retries">Retry count</string>
    <string name="pref_system_timeout">Query timeout</string>
    <string name="pref_title_debug">Debug queries</string>
    <string name="pref_system_debug">Show DNS queries in the Android log</string>
    <string name="about">
    This Android software is Copyright (c) 2010-2011, Samuel Benz (benz@geoid.ch) under GPL.\n\n
    http://www.geoid.ch/dnsdroid\n\n
    The delegation test library written by Samuel Benz (benz@switch.ch) is Copyright (c) 2009-2011, SWITCH. This library is not open and it is used in this software under permission of SWITCH in binary form only.\n\n
    The dnsjava library is Copyright (c) 1999-2005, Brian Wellington (bwelling@xbill.org) under BSD license.\n\n
    The oxygen icons are Copyright (c) 2007-2009, David Vignoni, Johann Ollivier Lapeyre, Kenneth Wimer, Nuno Fernades Pinheiro, Riccardo Iaconelli, David Miller under GPL.</string>
    <plurals name="month">
        <item quantity="one">1 month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">1 week ago</item>
        <item quantity="other">%1$d weeks ago</item>
    </plurals>
        <plurals name="days">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">&lt;1 minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>
    <string name="checkdelegation.address.syntax.ok" >The format of the IP address for the name server {param} is valid.</string>
    <string name="checkdelegation.address.syntax.error" >The format of the IP address for the name server {param} is invalid.</string>
    <string name="checkdelegation.address.private.ok" >The IP address for the name server {param} is not in a reserved or internal range.</string>
    <string name="checkdelegation.address.private.linklocal" >The IP address for the name server {param} is from an internal range.</string>
    <string name="checkdelegation.address.private.multicast" >The IP address for the name server {param} is from a multicast range.</string>
    <string name="checkdelegation.address.recursive.ok" >The name server {param} does not respond to recursive queries.</string>
    <string name="checkdelegation.address.recursive.is_recursive" >The name server {param} responds to recursive queries.</string>
    <string name="checkdelegation.address.tcp.unreachable" >The name server {param} is not reachable over TCP.</string>
    <string name="checkdelegation.address.tcp.ok" >The name server {param} is reachable over TCP.</string>
    <string name="checkdelegation.delegation.syntax.ok" >The format of the domain name is valid.</string>
    <string name="checkdelegation.delegation.syntax.name_too_long" >The domain name is too long.</string>
    <string name="checkdelegation.delegation.syntax.label_too_long" >A label of the domain name is too long: {param}.</string>
    <string name="checkdelegation.delegation.glue.info" >A \"glue\" entry is required for each of the following name servers: {param}.</string>
    <string name="checkdelegation.delegation.glue.ok" >No \"glue\" entries are required.</string>
    <string name="checkdelegation.delegation.missingNsAtChild.ok" >All name servers given are configured for the domain name.</string>
    <string name="checkdelegation.delegation.missingNsAtChild.differ" >Some of the purported name servers don\'t have the domain name configured on them: {param}.</string>
    <string name="checkdelegation.delegation.missingNsAtInput.ok" >All name servers were specified that were found in the DNS for the domain name.</string>
    <string name="checkdelegation.delegation.missingNsAtInput.differ" >Fewer name servers were specified than could be found in the DNS for the domain name. The following additional name servers were found and should be specified as well: {param}.</string>
    <string name="checkdelegation.delegation.no_ns_found_at_child" >The name server {param} fails to respond with a list of name servers for the domain name.</string>
    <string name="checkdelegation.delegation.ns_count.error" >No name servers were specified.</string>
    <string name="checkdelegation.delegation.ns_count.warning" >At least two name servers are recommended.</string>
    <string name="checkdelegation.delegation.ns_count.ok" >A sufficient number of name servers were specified.</string>
    <string name="checkdelegation.delegation.ip_count.error" >The specified name servers don\'t have an IPv4 address.</string>
    <string name="checkdelegation.delegation.ip_count.warning" >It is recommended that the specified name servers have at least two distinct IPv4 addresses in total. Number of distinct IPv4 addresses: {param}.</string>
    <string name="checkdelegation.delegation.ip_count.ok" >The name servers specified have a sufficient number of distinct IPv4 addresses. Number of distinct IPv4 addresses: {param}.</string>
    <string name="checkdelegation.nameserver.syntax.ok" >The name of the name server {param} is valid.</string>
    <string name="checkdelegation.nameserver.syntax.name_too_long" >The name of the name server {param} is too long.</string>
    <string name="checkdelegation.nameserver.syntax.label_not_start_with_letter_or_digit" >The name of the name server doesn\'t start with a letter or digit: {param}.</string>
    <string name="checkdelegation.nameserver.syntax.label_not_end_with_letter_or_digit" >The name of the name server doesn\'t end with a letter or digit: {param}.</string>
    <string name="checkdelegation.nameserver.syntax.label_contains_illegal_char" >The name of the name server contains invalid characters: {param}.</string>
    <string name="checkdelegation.nameserver.syntax.label_too_long" >The name of the name server contains overly long labels: {param}.</string>
    <string name="checkdelegation.nameserver.host_in_dns.ok" >The name server {param} was found in the DNS.</string>
    <string name="checkdelegation.nameserver.host_in_dns.not_found" >The name server {param} could not be found in the DNS.</string>
    <string name="checkdelegation.nameserver.host_not_cname.is_cname" >The name server {param} points to a CNAME alias.</string>
    <string name="checkdelegation.nameserver.host_not_cname.ok" >The name server {param} does not point to a CNAME alias.</string>
    <string name="checkdelegation.nameserver.host_not_cname.no_response" >The name server {param} fails to respond to a query for a CNAME entry.</string>
    <string name="checkdelegation.nameserver.missingIpAtNs.ok" >All IP addresses found for the name server {param} are configured in the DNS.</string>
    <string name="checkdelegation.nameserver.missingIpAtNs.differ" >Not all IP addresses which are found in our database for this name server could be found in the DNS. The name server\'s hostmaster should remove the following IP addresses from the database entry: {param}.</string>
    <string name="checkdelegation.nameserver.missingIpAtInput.ok" >All IP addresses found for the name server {param} are configured in the DNS.</string>
    <string name="checkdelegation.nameserver.missingIpAtInput.differ" >Some of the IP addresses found for this name server in the DNS are missing in our database. The name server\'s hostmaster should add the following IP addresses to the database entry: {param}.</string>
    <string name="checkdelegation.nameserver.no_address_found" >The name server {param} failed to return its own IP address.</string>
    <string name="checkdelegation.soa.getsoa.ok" >All name servers respond authoritatively.</string>
    <string name="checkdelegation.soa.getsoa.no_aa" >The following name servers fail to respond authoritatively for the domain name: {param}.</string>
    <string name="checkdelegation.soa.consistency.ok" >The SOA records for all name servers (serial number {param}) are identical.</string>
    <string name="checkdelegation.soa.consistency.differ" >The following SOA records differ: serial numbers {param}.</string>
    <string name="checkdelegation.soa.one_soa.ok" >Each name server carries exactly one SOA record.</string>
    <string name="checkdelegation.soa.one_soa.more_than_one" >Some name servers carry multiple SOA records. The following name servers carry more than one SOA entry: {param}.</string>
    <string name="checkdelegation.soa.rname.ok" >The administrative contact {param} in the SOA record is well-formatted.</string>
    <string name="checkdelegation.soa.rname.no_email" >The format of the administrative contact {param} in the SOA record is invalid.</string>
    <string name="checkdelegation.soa.getsoa.no_response" >The following name servers fail to respond to a query for the SOA record: {param}.</string>
    <string name="checkdelegation.dnssec.state.disabled" >DNSSEC is not enabled.</string>
    <string name="checkdelegation.dnssec.state.child_only" >DNSSEC is configured on your name servers only.</string>
    <string name="checkdelegation.dnssec.state.parent_only" >WARNING! DNSSEC is enabled on our name servers only. The domain name will not work! DNSSEC will also have to be configured on the name servers of your domain name.</string>
    <string name="checkdelegation.dnssec.state.ok" >DNSSEC is enabled.</string>
    <string name="checkdelegation.dnssec.algorithm.error" >There were no DNSKEY records found to check the algorithm.</string>
    <string name="checkdelegation.dnssec.algorithm.ok" >No DNSKEY record has RSAMD5 as its algorithm type.</string>
    <string name="checkdelegation.dnssec.algorithm.ismd5" >The following DNSKEY records have an algorithm type of RSAMD5: {param}.</string>
    <string name="checkdelegation.dnssec.protocol.error" >No DNSKEY records could be found to check the protocol.</string>
    <string name="checkdelegation.dnssec.protocol.ok" >The protocol of all DNSKEY records is suitable for DNSSEC.</string>
</resources>