<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    >
    
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="fill_parent"></ListView>
    
    <LinearLayout android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:gravity="right" android:layout_height="wrap_content">
		
		<EditText android:text="@string/domain_input" android:id="@+id/DomainText"
			android:layout_width="wrap_content" android:layout_height="fill_parent"
			android:hint="@string/domain_input_help" android:clickable="true"
			android:focusable="true" android:maxLength="100" android:singleLine="true" android:layout_weight="1"><requestFocus />
		</EditText>
		<Button android:text="@string/start_test" android:id="@+id/StartTest"
			android:layout_width="wrap_content" android:layout_height="fill_parent" >
		</Button>
	
    </LinearLayout>

</LinearLayout>
    